[package]
name = "reg-watcher"
version = "0.1.1"
authors = ["wlbf <lbf1353@live.com>"]
license = "MIT"
description = "A rust library for single instance application."
repository = "https://github.com/WLBF/reg-watcher"
readme = "README.md"
keywords = ["reg", "registry", "watch", "windows"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[dependencies]
winreg = "0.5.1"
failure = "0.1.1"
uuid = { version = "0.6.0", features = ["v4"] }
widestring = "0.2.2"
winapi = { version = "0.3.4", features = ["synchapi", "winbase", "errhandlingapi"] }
futures = "0.1"
tokio = "0.1"